<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/exercise_create_details_muscu_nb_repetitions" />

    <EditText
        android:id="@+id/exercise_create_details_muscu_nb_repetitions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/exercise_create_details_muscu_tps_repos" />

    <EditText
        android:id="@+id/exercise_create_details_muscu_tps_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/exercise_create_details_muscu_validate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/exercise_create_details_general_validate_button" />

    <Button
        android:id="@+id/exercise_create_details_muscu_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_create_details_general_reset_button" />

</LinearLayout>