<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/Container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <ImageView
            android:id="@+id/exercise_row_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/exercise_icon"
            android:src="@drawable/abc_ic_ab_back_holo_light" />

        <TextView
            android:id="@+id/exercise_row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameless_exercise" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Bouton_Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <ImageView
            android:id="@+id/exercise_row_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/exercise_row_edit"
            android:src="@drawable/edit_icon_24" />

        <ImageView
            android:id="@+id/exercise_row_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/exercise_row_delete"
            android:src="@drawable/delete_icon_24" />
    </LinearLayout>

</LinearLayout>